# majority-vote

majority-vote-client/: README.md  package-lock.json  package.json  vite.config.ts
majority-vote-client/src/: App.vue
majority-vote-client/src/components/: AnswerBackground.vue  ColorfulBackground.vue  TimerBar.vue
majority-vote-client/src/services/: apiService.ts
majority-vote-client/src/types/: index.ts
majority-vote-client/src/views/: HomeView.vue
majority-vote-server/: .env.example  Cargo.toml  Rocket.toml  Rocket.toml.example  package-lock.json  package.json
majority-vote-server/src/: app.ts  database.rs  db.config.ts  main.rs
majority-vote-server/src/database/entity/: answer.entity.ts  question.entity.ts
majority-vote-server/src/migration/: 1730503748432-initialQuestion.ts  1730505729961-initQuestions.ts  1730513688145-initAnswers.ts
majority-vote-server/src/routes/: get_question.rs  mod.rs  root.ts  submit_answer.rs
majority-vote-server/src/routes/question/: controller.ts  index.ts
majority-vote-server/src/types/: answer.rs  error.rs  getQuestion.ts  mod.rs  question.rs  submitResponse.ts
